# Sage

./: .env.example  .gitignore  Dockerfile  MISSION_STATEMENT.md  README.md  Runtime.py  SAGE_ACTIVATION_REPORT.md  SAGE_FINAL_ENGINEERING_REPORT.md  SAGE_PHASE_2_DESIGN.md  SAGE_PHASE_2_REPORT.md  api_log.txt  docker-compose.yml  pyproject.toml  render.yaml
.github/: copilot-instructions.md
.github/workflows/: main.yml
.sage/: ROADMAP.md  sage_state.json
.sage/archive/: SAGE_RUNTIME_V1_ACTIVATION_CHECKPOINT.md
Main Archive/: INDEX.md
docs/: architecture_freeze.md
sage/: __init__.py  api.py  cli.py  command_center.py  decision.py  integration.py  models.py  service.py  validation.py
sage_data/: checkpoint_0692e636.json  checkpoint_0f4322a4.json  checkpoint_1957a964.json  checkpoint_1c0233be.json  checkpoint_1ea32edf.json  checkpoint_20acc375.json  checkpoint_26509163.json  checkpoint_2a690006.json  checkpoint_2a85203c.json  checkpoint_2c92c05e.json  checkpoint_2dc88551.json  checkpoint_3077d034.json  checkpoint_39628e7f.json  checkpoint_3ad5c5ec.json  checkpoint_44d65bff.json  checkpoint_5aef9376.json  checkpoint_5d5a8ba1.json  checkpoint_608890b7.json  checkpoint_61ee2961.json  checkpoint_75b2f334.json  checkpoint_7739c71d.json  checkpoint_7b5cd957.json  checkpoint_8892300a.json  checkpoint_8fe97d5d.json  checkpoint_983529ca.json  checkpoint_9c30dc86.json  checkpoint_9cab58b8.json  checkpoint_a3b588c0.json  checkpoint_ae32f1d9.json  checkpoint_b13bd726.json  checkpoint_b34612c4.json  checkpoint_c194c056.json  checkpoint_ccf2605d.json  checkpoint_dbd314ac.json  checkpoint_e8d66eb9.json  checkpoint_eaaa5dca.json  checkpoint_eb0a29a8.json  checkpoint_eff17ccf.json  checkpoint_f9e3d453.json  state.json
scripts/: activate_runtime.py  activate_sage.sh  live_setup.py  pre-commit  production_check.py  run_production.sh  verify_convergence.py
tests/: VALIDATION_PROTOCOL.md  __init__.py  conftest.py  test_acr.py  test_acrx_falsification.py  test_api.py  test_api_auth.py  test_archive.py  test_archive_intelligence.py  test_archive_persistence.py  test_attack_laboratory.py  test_automation.py  test_business.py  test_c11_integration.py  test_civ_001.py  test_command_center.py  test_config.py  test_connected_runtime.py  test_continuity_bridge.py  test_continuity_integration.py  test_continuity_intelligence.py  test_continuity_persistence.py  test_integrations.py  test_intelligence.py  test_interfaces.py  test_memory.py  test_memory_persistence.py  test_new_systems.py  test_phase2_activation.py  test_registry.py  test_reliability_and_skal.py  test_reliability_tracker.py  test_runtime.py  test_runtime_contract.py  test_runtime_intelligence.py  test_sage2_operational_loop.py  test_sage_core_extensive.py  test_skal.py  test_skal_integration.py  test_stp_civ_validation.py  (+4 more)
(+201 files in other folders)
