[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sage-runtime"
version = "0.1.0"
description = "SAGE Autonomous Continuity Runtime - AI-assisted development with state persistence and validated knowledge lineage"
readme = "README.md"
authors = ["SAGE Development Team"]
license = "MIT"
packages = [{include = "sage"}]

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
python-dotenv = ">=1.0"
uvicorn = "*"
fastapi = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
pytest-asyncio = ">=0.21"
black = ">=23.0"
ruff = ">=0.1"
mypy = ">=1.0"
httpx = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
